--- a/src/fvtt-playground.scss
+++ b/src/fvtt-playground.scss
@@ -1,5 +1,2 @@
-/* ------------------------------------ */
-/*				   Sass					*/
-/* This is your Sass entry file			*/
-/* ------------------------------------ */
-
+@import "styles/variables";
+@import "styles/base";
